examples/python/failing/bracketed_imports_issue_320/ExpectedIdeally.py
from ..._utils import foo, bar, async_foo
